<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_track"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/trackNew" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/price"
            android:textAlignment="textEnd" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/artistNew" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingHorizontal="30dp"
            android:text="@string/date"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>
